Finished Compare Run (Inline Version - Archived Prototype)

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -613,19 +613,13 @@
     "                    l._log() # 'sender'\n",
     "                    \n",
     "    def _compare_runs(self, sender):\n",
-    "        cnt = 0\n",
-    "        ttl = 0\n",
-    "        for l in self.li:\n",
-    "            ttl = ttl + 1\n",
-    "            if l.check.value:\n",
-    "                cnt = cnt + 1\n",
     "        \n",
     "        with self.out:\n",
     "            clear_output()\n",
     "            display(Markdown('{0} out of {1} scripts selected to be run'.format(cnt,ttl)))\n",
     "\n",
     "            self.compare_run_dd = widgets.Dropdown(\n",
-    "                    options=self._update_dd_compare(),\n",
+    "                    options=self._update_compare_dd(),\n",
     "                    description='Pick graph:',\n",
     "                    disabled=False)\n",
     "            self.compare_run_btn = widgets.Button(description='Compare',\n",
@@ -637,9 +631,8 @@
     "            display(self.compare_run_dd)\n",
     "            display(self.compare_run_btn)\n",
     "    \n",
-    "    def _update_dd_compare(self):\n",
+    "    def _update_compare_dd(self):\n",
     "        self.l_checked = []\n",
-    "        l_check_count = 0\n",
     "        graphs_count = {}\n",
     "        graphs_tocompare = []\n",
     "        for l in self.li:\n",
@@ -660,34 +653,46 @@
     "    def _run_compare_runs(self, sender):\n",
     "        \n",
     "        with self.out:\n",
-    "            self.compare_run_dd.options = self._update_dd_compare()\n",
+    "            \n",
+    "            self.compare_run_dd.options = self._update_compare_dd()\n",
     "            filename = self.compare_run_dd.value\n",
     "\n",
     "            data_raw = []\n",
     "            for l in self.l_checked:\n",
-    "                data_raw.append(pio.read_json(os.path.join(l, filename)))\n",
-    "\n",
-    "            tups = [(x['layout']['title']['text'].split(' - ')[-1], x['data']) for x in data_raw]\n",
-    "\n",
+    "                data_raw.append((l,pio.read_json(os.path.join(l, filename))))\n",
+    "                \n",
+    "            layout = data_raw[0][1]['layout']\n",
+    "            data_interim = [(x[0], x[1]['data']) for x in data_raw]\n",
+    "            \n",
+    "            clear_output()\n",
     "            legend_names = []\n",
-    "            data_out = []\n",
-    "\n",
-    "            for tup in tups:\n",
-    "                for sca in tup[1]:\n",
-    "                    if sca['name'] not in legend_names:\n",
-    "                        plot = sca\n",
-    "                        if sca['name'] != \"External temperature\":\n",
-    "                            plot['name'] = sca['name'] + ' - ' + tup[0]\n",
+    "            data_display = []\n",
+    "            \n",
+    "            colors = [\"lightskyblue\",\n",
+    "                    \"mediumseagreen\",\n",
+    "                    \"goldenrod\",\n",
+    "                    \"deeppink\",\n",
+    "                    \"LightGray\",\n",
+    "                    \"mediumspringgreen\",\n",
+    "                     \"darksalmon\"]\n",
+    "            color_index = 0\n",
+    "            \n",
+    "            for dataset in data_interim:\n",
+    "                for scatter in dataset[1]:\n",
+    "                    if scatter['name'] not in legend_names:\n",
+    "                        plot = scatter\n",
+    "                        if scatter['name'] != \"External temperature\":\n",
+    "                            plot['name'] = scatter['name'] + ' - ' + os.path.basename(tup[0]\n",
+    "                            plot['line']['color'] = colors[color_index]\n",
+    "                            color_index += 1\n",
     "                        data_out.append(plot)\n",
     "                        legend_names.append(plot['name'])\n",
     "\n",
-    "\n",
     "            fig = go.Figure(\n",
     "                data=tuple(data_out),\n",
-    "                layout=data_raw[0]['layout']\n",
+    "                layout=layout\n",
     "            )\n",
     "            \n",
-    "            clear_output()\n",
     "            display(self.compare_run_dd)\n",
     "            display(self.compare_run_btn)\n",
     "            fig.show()\n",
@@ -741,10 +746,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
-    "lines_to_end_of_cell_marker": 2,
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 2
    },
    "outputs": [
     {
@@ -774,7 +778,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efc44b6c305a4a5d8cb06c309d64ab40",
+       "model_id": "ea58ae1aee0941419f4dcdf384d58766",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +792,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cedb28b4c0c405eb9a9ad921159127c",
+       "model_id": "d6a861d4b3224979abd13c9e3b566bd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -857,7 +861,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4a9a260f054467aaff5eaf1b6fc2b89",
+       "model_id": "aff4856b26cb4a049e16ee74554f2e79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -871,7 +875,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c08a4014b8d4465ab9172414d7f4954d",
+       "model_id": "317804920a4e4e48a9dbe57086ea3275",
        "version_major": 2,
        "version_minor": 0
       },
@@ -961,7 +965,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60e51405c7114e99917b496641e1681f",
+       "model_id": "bd829f07882d4cfd94278fac31e8deb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -975,7 +979,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1aa58e4bbe85441597fd6b0d5a6bff70",
+       "model_id": "ec5f7fe939ef465790488ff9c2ea6830",
        "version_major": 2,
        "version_minor": 0
       },
@@ -989,7 +993,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c09e180a4ab42d6878e6619427af52e",
+       "model_id": "64e2672a1f3947f0bd0f4e9e8c6603f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1003,7 +1007,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95acf61c9c694fc0b50e36872905dcbc",
+       "model_id": "6594fe79b5a447e782f2d44f219f07cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1017,7 +1021,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "681858b4b9e042b18f93bbbeb6052ac7",
+       "model_id": "f000171315bf4e7186c95b9c5f97f825",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1031,7 +1035,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58cc4f423f5e4e3db00e59096541af26",
+       "model_id": "a64ea40afd784ea0bee802ba086d115b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1045,7 +1049,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8e083a408df41fabbd25dd3e19e9d05",
+       "model_id": "a9b988dedf79420da8016e05a366f33b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1059,7 +1063,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a27fa50c27944ea6a05dc310d73ddeef",
+       "model_id": "b60471a600074d7185a08010ef15191f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1148,7 +1152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4962050609c84b1bb6a831ebf29b0555",
+       "model_id": "dbd70194bf8247a394ab50d04ebdac2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1162,7 +1166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4432af5cbc534cc98fe17a46690de88a",
+       "model_id": "313a943dc3894676821516bfd8f8e40e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1176,7 +1180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86d0d8db4b6d44c3bfdcc7df71ace960",
+       "model_id": "03d5e916fd984503be246cc7121bb1bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1190,7 +1194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36ee728880bb4cae8ed4236e4becc60b",
+       "model_id": "9a97350501b4404b81e8a42b888f2460",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1204,7 +1208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0f716c5b38748a098b750743bd1ad21",
+       "model_id": "57cb1107b2d043b68335a06606bbbaf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1218,7 +1222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0955c71baa34569a74a899618d1279e",
+       "model_id": "c487f1a4d5d44652a9873bdc55e74b28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1232,7 +1236,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d80a4959aa0741c4a5f1f24597299b86",
+       "model_id": "7a49998264884eb78eeb906ed20becc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1246,7 +1250,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ca9c5302a7f43259c32079ce24ca14b",
+       "model_id": "37e7f084e60c459194bce37bc858fb26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1306,7 +1310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30972d42e2d94c46ae7cbafe9d639088",
+       "model_id": "e04b3a8bc7dc43e7b74d1952d693ddc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1320,7 +1324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6ad8141da82432697f2fb1c639af968",
+       "model_id": "d887ff5be1f041248c873b6292582afc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1334,7 +1338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ec920dcaa764ce7807705c75ae27431",
+       "model_id": "4813e7a226d7470ea1798afa78f34b68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1566,6 +1570,22 @@
     "    display(Markdown('''Batch Run of RunApps, for ModelRun'''))\n",
     "    display(runapps, display_id=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
