Finished Compare Run (Inline Version - Archived Prototype)

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -613,7 +613,12 @@
     "                    l._log() # 'sender'\n",
     "                    \n",
     "    def _compare_runs(self, sender):\n",
-    "        \n",
+    "        cnt = 0\n",
+    "        ttl = 0\n",
+    "        for l in self.li:\n",
+    "            ttl = ttl + 1\n",
+    "            if l.check.value:\n",
+    "                cnt = cnt + 1\n",
     "        with self.out:\n",
     "            clear_output()\n",
     "            display(Markdown('{0} out of {1} scripts selected to be run'.format(cnt,ttl)))\n",
@@ -666,7 +671,7 @@
     "            \n",
     "            clear_output()\n",
     "            legend_names = []\n",
-    "            data_display = []\n",
+    "            data_out = []\n",
     "            \n",
     "            colors = [\"lightskyblue\",\n",
     "                    \"mediumseagreen\",\n",
@@ -682,7 +687,7 @@
     "                    if scatter['name'] not in legend_names:\n",
     "                        plot = scatter\n",
     "                        if scatter['name'] != \"External temperature\":\n",
-    "                            plot['name'] = scatter['name'] + ' - ' + os.path.basename(tup[0]\n",
+    "                            plot['name'] = scatter['name'] + ' - ' + os.path.basename(dataset[0])\n",
     "                            plot['line']['color'] = colors[color_index]\n",
     "                            color_index += 1\n",
     "                        data_out.append(plot)\n",
@@ -778,7 +783,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea58ae1aee0941419f4dcdf384d58766",
+       "model_id": "95c35ac536f64a3e9f253dc1f6d4561c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -792,7 +797,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6a861d4b3224979abd13c9e3b566bd7",
+       "model_id": "2f4c73e50dd54869bc6f10b39dadd368",
        "version_major": 2,
        "version_minor": 0
       },
@@ -861,7 +866,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aff4856b26cb4a049e16ee74554f2e79",
+       "model_id": "0fc30508730047d6bc3432877039f182",
        "version_major": 2,
        "version_minor": 0
       },
@@ -875,7 +880,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "317804920a4e4e48a9dbe57086ea3275",
+       "model_id": "ef9ec164eae14b48a4e8f592bf8f204f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -965,7 +970,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd829f07882d4cfd94278fac31e8deb0",
+       "model_id": "a53f2e74ef114c38a8fcf09bcb1898b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -979,7 +984,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec5f7fe939ef465790488ff9c2ea6830",
+       "model_id": "7140fd2820994f398c62ec5f0940d9ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -993,7 +998,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e2672a1f3947f0bd0f4e9e8c6603f4",
+       "model_id": "9ff493b4fdd647bd812d99eceeb41c7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1007,7 +1012,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6594fe79b5a447e782f2d44f219f07cc",
+       "model_id": "8a584f62de3c48aeb2629c870cd81622",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1021,7 +1026,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f000171315bf4e7186c95b9c5f97f825",
+       "model_id": "f5d374fe2f3242e094d77bdb7feda863",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1035,7 +1040,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a64ea40afd784ea0bee802ba086d115b",
+       "model_id": "bf446fb1b30a40ff9c4e1cf391f8098e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1049,7 +1054,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9b988dedf79420da8016e05a366f33b",
+       "model_id": "775909f87c58440d88d9dfacbcf4fd3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1063,7 +1068,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b60471a600074d7185a08010ef15191f",
+       "model_id": "606e8f9f02ce4743b8d51dd934cca59e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1152,7 +1157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbd70194bf8247a394ab50d04ebdac2f",
+       "model_id": "04a1877b08234cc390e50d4caa2b44cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1166,7 +1171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "313a943dc3894676821516bfd8f8e40e",
+       "model_id": "807eef62529440dca1c32cd15ec956f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1180,7 +1185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03d5e916fd984503be246cc7121bb1bd",
+       "model_id": "0ad7157dd6694faea9f0c64ac51ec68c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1194,7 +1199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a97350501b4404b81e8a42b888f2460",
+       "model_id": "e38da8dc997d4bb1a24cb11ffd35bd9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1208,7 +1213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57cb1107b2d043b68335a06606bbbaf0",
+       "model_id": "28572ddaf6b24e0f9a4bc86148813238",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1222,7 +1227,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c487f1a4d5d44652a9873bdc55e74b28",
+       "model_id": "63a1e087387f46b4b55d55bac2f95051",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1236,7 +1241,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a49998264884eb78eeb906ed20becc0",
+       "model_id": "a0f9e1efb2ba401888de67516c82595b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1250,7 +1255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37e7f084e60c459194bce37bc858fb26",
+       "model_id": "bf2c5d6e52864a169e82a940d585aaac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1310,7 +1315,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e04b3a8bc7dc43e7b74d1952d693ddc3",
+       "model_id": "6f0452c382a4474d94412418d8425157",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1324,7 +1329,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d887ff5be1f041248c873b6292582afc",
+       "model_id": "7443c57f068646509f1002ff55321d5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1338,7 +1343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4813e7a226d7470ea1798afa78f34b68",
+       "model_id": "cd2ecf819bcb4efda27cd5d785462d8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1577,6 +1582,13 @@
    "metadata": {
     "lines_to_next_cell": 2
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
