Added Prototype of RunAppComparison

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -593,6 +593,7 @@
     "    \"\"\"\n",
     "    #def __init__(self, fpth, fdir='.', local_fol='_mfengdev'):\n",
     "    def __init__(self, config):\n",
+    "\n",
     "        self.out = widgets.Output()\n",
     "        self._errors()\n",
     "        self.config = config\n",
@@ -773,9 +774,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\engDev\\git_mf\\ipyrun\\examples\\testproject\\datadriven\\src\\appdata\\inputs\\inputs-compare_model_run_file.json\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Example0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3f9780f55a44e0684506236b8314479",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(ToggleButton(value=False, button_style='info', description='inputs from file'), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e88ea5af7ab74eeeb127460d8a9e4f51",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(HBox(children=(HTML(value='<p>Comparison</p>'), HBox(children=(SelectMultiple(op…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e56a718044347a6bb877170b9bfdfbc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/markdown": [
@@ -803,7 +887,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8bb3e8f68034c72aee00b4d251deb92",
+       "model_id": "20eb80ebc2dd4a9ab4c8c4423ac8bec8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -817,7 +901,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e85d107647ad47859710f447ed043b09",
+       "model_id": "d5f5f0ddd4494587a92fd7c8a694c145",
        "version_major": 2,
        "version_minor": 0
       },
@@ -831,7 +915,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dbfadc0b9ab425292012cf150db793a",
+       "model_id": "1ea658a363b245f4a3db480290e8bbca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -845,7 +929,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f3dcaab82e04ba0865505c42e891b72",
+       "model_id": "1be3b584285b472ea13d12e9a03b5db7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -859,7 +943,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ec2049063034ab1b5b00eb4a50a000e",
+       "model_id": "99a3607673504a72afb4e3aa8c7872ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -873,7 +957,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f785fee31e848a5ace4368c960b1f59",
+       "model_id": "b20e634e95304bc7933d4f2b7aaf25c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -887,7 +971,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dd69cb90cae4d868616991601321787",
+       "model_id": "754c89f249294505bcc0a33349ed775b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -901,7 +985,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "255884fab5ae4504b3e0ab2cc0e8f215",
+       "model_id": "69f7982836bf40c2ba334b9016c407be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -915,7 +999,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef82fc670d3f440c947f391b7528b37b",
+       "model_id": "fad8d663ee324eeebd29854743650c03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -975,7 +1059,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c870466fd3664cf8b797e038cca3d544",
+       "model_id": "6ba0fc73923d4c8d9d587059ef1a5aa0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -989,7 +1073,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa150071574649babf64a424104e601f",
+       "model_id": "6be781ce163b43669611ff092000f89c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1003,7 +1087,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df3921f6571d4015bb558eb245e9761f",
+       "model_id": "fc3b38d186d64dbcbf1834245a3fb815",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1017,7 +1101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6256c863c85943259619798a24ac10a8",
+       "model_id": "18e3c645383441dba345bcfd1674240a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1031,7 +1115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b314264e55b64e40b5a77dbebdbdc921",
+       "model_id": "70ae0b68d5de4fb19800fb0ce30529c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1045,7 +1129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38366930747f468280319cfd15e0e8a1",
+       "model_id": "2e3e016a3de44070b8323f02be92f8a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1059,7 +1143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11379d443cd242a6a072f43a6f4d0fb2",
+       "model_id": "0bb715af8ccc497b83426d27089b7798",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1073,7 +1157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d01c77b4d8374083b20632886553c0c6",
+       "model_id": "f8002dc235084b5db2152ada98cd67d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1087,7 +1171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3955ae35fa9a4c3e9a629d78f17f4398",
+       "model_id": "8bab58410f144184bf6055a39e447cd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1101,7 +1185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0d3726b86e04a1482b432f810bccb48",
+       "model_id": "1295c59ee2fa4201859c71ae4b2aa0b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1115,7 +1199,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d70d19857fac42acaafd8220816ef62f",
+       "model_id": "f4a8474d65084222b1470abb23719b80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1147,6 +1231,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\inputs-docx_to_pdf.json\n"
+     ]
     },
     {
      "data": {
@@ -1175,7 +1266,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67c31452200c469fa6a2adc89dde8614",
+       "model_id": "076f92cc790c40a1af5358e703860b3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1189,7 +1280,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fc90e7de3674cf7ac1291c573905f18",
+       "model_id": "8a4429fb5df3441dbbc850a5a356b574",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1203,7 +1294,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25415f781da945ab8ab082ae46da8eb6",
+       "model_id": "a903ddd62e984f4d93ed98586b40b25c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1237,6 +1328,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\inputs-gbxml.json\n"
+     ]
+    },
+    {
      "data": {
       "text/markdown": [
        "### Example3"
@@ -1263,7 +1361,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9342f31841f7487aa1f688af0b2c0722",
+       "model_id": "dbc5c18da4a544e78bf58dba8deff351",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1277,7 +1375,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81570a2c8b7a4199b70d01da5f11004a",
+       "model_id": "864ea59a0b654fab82798c63bd5d2a2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1291,7 +1389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a10c8855a154b99af42d8516b1f4944",
+       "model_id": "ea458db6fdfe4a52a85961fe425e927d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1363,7 +1461,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43c21bd5c35e41d4bed42dc98622c972",
+       "model_id": "87954dc3655e47628cfe6767cc74426b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1377,7 +1475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42728fafdb324169b7930dc55eb382c1",
+       "model_id": "7a81fd6d2a2845629d05f5c37ca77615",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1391,7 +1489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3a9f40e35f945ebb1e33712ff4b89c0",
+       "model_id": "e84d1894d9f14fcab3d3bbe40bb637d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1405,7 +1503,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b4e7431bced460a9c90c7a3d9d448da",
+       "model_id": "91e5bed1e2074c35a32dc2ea330cdf1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1419,7 +1517,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adf409ba33954800af43229fd1ea214f",
+       "model_id": "265257c8f2e94d8ab2d03cfec0a627b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1433,7 +1531,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91a03aa75f7f40f5a4970c9aed86a5d9",
+       "model_id": "d6597ace93cd43d48155287dd4c015d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1447,7 +1545,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7481ccb9786546818cc8ba075a161e0a",
+       "model_id": "210b01721aad4c3382da60b16f3e4ef0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1461,7 +1559,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74baf31c721f45e2afe5b46dc7663dcb",
+       "model_id": "050a0d2e74754de8b801c6a905bc173d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1475,7 +1573,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "897790a458fa4f4fb60b570d8f5327d5",
+       "model_id": "128d9a56f38f427aaf67414d46b3895f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1489,7 +1587,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97179a9f71754fb1b75af1adf6474f67",
+       "model_id": "bffcce5e07894127b5767b3f9073d720",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1503,7 +1601,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25c37dc0f07c491eb9dd6d059c1e1dbc",
+       "model_id": "2dad473a47e04645aafec559ba5f92b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1517,7 +1615,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8a76c2412694f3291a9efce0b9df36a",
+       "model_id": "0bea091a51c443cdbf0376bab1544eac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1531,7 +1629,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f62d36df00f64ae18651463fc401ead4",
+       "model_id": "56230f5f2ed44c2dac07174e42f12c36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1545,7 +1643,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6e05719f3e04587a3fbb65a004c49b1",
+       "model_id": "e7d1f3d6144c45a39b2523bf91c5255e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1579,6 +1677,13 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\inputs-gbxml.json\n"
+     ]
+    },
+    {
      "data": {
       "text/markdown": [
        "### Example5"
@@ -1605,7 +1710,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41af49b0c4e54e5ab10549ccad27ae1e",
+       "model_id": "a4791014c3b74f59a6f2cd497d96c282",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1619,7 +1724,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ad5ddaedb1c43af8008097d4ffa09b3",
+       "model_id": "25cef747f1d64438ae1df52a237e3836",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1633,7 +1738,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "823fb53214474e3c92bbb257b94dd703",
+       "model_id": "eb94d47ae03c4873a301a31c4ce07fb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1693,7 +1798,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ce34b39f7e342458dedf642f6f854d1",
+       "model_id": "994acd0c3f414a8f8858f5a8d7413b3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1707,7 +1812,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5aaea5d9ee4f4a0ab15ab38165fd0cda",
+       "model_id": "c32ca1fb5f90455a939b941b8c53b6ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1743,7 +1848,7 @@
    ],
    "source": [
     "if __name__ =='__main__':\n",
-    "    \n",
+    "\n",
     "    # FORM ONLY EXAMPLE\n",
     "    NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "    fpth = os.path.join(NBFDIR,r'appdata\\inputs\\test.json')\n",
